got more info added to entities
