# StudyCards.UI/studycardsui/openapidoc.json
@@ -170,7 +170,33 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Deck"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Deck"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Deck"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -269,6 +295,37 @@
         "properties": {
           "deckName": {
             "type": "string"
+          }
+        }
+      },
+      "Deck": {
+        "type": "object",
+        "properties": {
+          "deckId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "deckName": {
+            "type": "string"
+          },
+          "userEmail": {
+            "type": "string"
+          },
+          "deckSettings": {
+            "$ref": "#/components/schemas/DeckSettings"
+          }
+        }
+      },
+      "DeckSettings": {
+        "type": "object",
+        "properties": {
+          "reviewsPerDay": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "newCardsPerDay": {
+            "type": "integer",
+            "format": "int32"
           }
         }
       },
